--- a/src/Components/Nestednavbar/nestednavbar.css
+++ b/src/Components/Nestednavbar/nestednavbar.css
@@ -1,52 +1,183 @@
-
-.dwon-arrow{
+.dwon-arrow {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 30vh;
-
-}
-.dwon-arrow .image-arrow{
-    width: 80px;
-    height: 80px;
 }
 
-.navbar-back{
-    background: #F6F8FC;
-    border:2px solid #C3CFE0;
-    border-left: none;
-    border-right: none;
-    box-shadow: 0px 10px 24px 0px #ACACAC26;
+.dwon-arrow .image-arrow {
+    width: 100px;
+    height: 100px;
+}
+
+.color-style {
+    background-color: white;
     width: 100%;
-    padding: 10px 10px;
+    border-bottom: 2px solid #C3CFE0;
+    height: auto;
 }
 
-.button-color{
+.nested .navbar-back {
+    width: 100%;
+    height: 74px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #F6F8FC;
+    border-bottom: 2px solid #C3CFE0;
+    box-shadow: 0px 10px 24px 0px #ACACAC26;
+}
+
+.navbar-back form {
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    gap: 20px;
+}
+
+.navbar-back .form-control-one, .form-control-two {
+    border: 1px solid #C3CFE0;
+    background: #FFFFFF;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.navbar-back .form-control-one label, .form-control-two label {
+    font-size: 15px;
+    font-weight: 500;
+    color: #272848;
+    margin: 0;
+    padding-left: 10px;
+}
+
+.navbar-back .form-control-one input, .form-control-two input {
+    background: none;
+    border: none;
+    outline: none;
+    padding-left: 20px;
+    width: 100%;
+}
+
+.navbar-back .form-control-one input {
+    width: 80%;
+}
+
+.navbar-back .form-control-one {
+    width: 700px;
+    height: 42px;
+}
+
+.navbar-back .form-control-two {
+    width: 520px;
+    height: 42px;
+}
+
+.navbar-back .button-color {
     background: #0167FF;
     color: #FFFFFF;
-    border: none;
-    border-radius:5px;
-    padding: 7px 10px;
     font-size: 16px;
-    font-weight: 600;
-    /* display: flex;
-    justify-content:start;
-    align-self: start; */
-    line-height: 25px;
-}
-.color-style{
-   background-color: white;
+    font-weight: 500;
+    width: 140px;
+    height: 42px;
 }
 
-.image-lap{
+.video-wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+    width: 100%;
+    height: 100vh;
+    background-color: #FFFFFF;
+    overflow: hidden;
 }
 
-.image-lap img{
-    width: 100%;  
+.video-player {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+    transition: transform 1s ease, width 1s ease, height 1s ease;
+}
+
+.video {
+    width: 100%;
+    height: auto;
+    object-fit: cover;
+    transition: transform 1s ease;
+}
+
+.zoomed {
+    width: 100%;
+    height: 100vh;
+    transform: scale(1);
+}
+
+.zoomed-out {
+    width: 1118px;
+    height: 800px;
+    transform: scale(1);
 }
 
 
+
+
+
+
+
+
+
+@media (max-width: 990px) {
+    .nested .navbar-back {
+        width: 100%;
+        height:auto;
+    }
+    .navbar-back form {
+        flex-direction: column;
+        gap: 20px;
+        width: 100%;
+        padding: 20px;
+    }
+
+    .navbar-back .form-control-one, .navbar-back .form-control-two {
+        width: 100%;
+    }
+
+
+    .navbar-back .button-color {
+        width: 20%;
+    }
+}
+
+@media (max-width: 768px) {
+    .navbar-back form {
+        flex-direction: column;
+        gap: 20px;
+    }
+
+    .navbar-back .form-control-one, .navbar-back .form-control-two {
+        width: 100%;
+    }
+
+    .navbar-back .button-color {
+        width: 70%;
+    }
+
+    .zoomed-out {
+        width: 100%;
+        height: auto;
+        transform: scale(1);
+    }
+}
+
+@media (max-width: 480px) {
+    .navbar-back .form-control-one input {
+        width: 100%;
+    }
+
+    .navbar-back .form-control-one, .navbar-back .form-control-two {
+        width: 100%;
+    }
+    .navbar-back .button-color {
+        width: 80%;
+    }
+}
