--- a/src/Components/Hero/hero.css
+++ b/src/Components/Hero/hero.css
@@ -1,63 +1,57 @@
-.hero-section {
+
+.hero-head {
   background: linear-gradient(180deg, #EDF3FF 0%, #FFFFFF 100%);
 }
 
-.hero-section .row {
+.hero-content {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
-  justify-content:center;
+  justify-content: space-between;
+  padding: 0 4rem; /* Adjusted for better padding */
 }
 
-.hero-content-head {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
-  margin-top: 5rem;
+.hero-item {
+  margin: 4rem 1rem;
+  margin-top: 9rem;
 }
 
-.hero-content-head h5 {
+.hero-item h5 {
   color: #0167FF;
   font-size: 15px;
   font-weight: 500;
   line-height: 25px;
 }
 
-.hero-content-head .hero-title {
+.hero-title {
   font-size: 46px;
   font-weight: 500;
-  line-height: 62.1px; 
 }
 
-.hero-content-head .hero-title span {
+.hero-title span {
   color: #0167FF;
 }
 
-.hero-content-head .search-bar {
+.search-box {
   width: 100%;
-  max-width: 555px;
-  height: 62px;
-  border-radius:5px;
+  min-width: 550px;
+  border-radius: 5px;
   background: #FFFFFF;
   border: 1px solid #C3CFE0;
-  margin-top:0.5rem;
+  margin-top: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-direction: row;
-  padding: 0 8px;
+  padding: 5px;
 }
 
-.hero-content-head .custom-select-wrapper {
+.search-box .custom-select-wrapper {
   display: flex;
   align-items: center;
-  justify-content: space-around;
   flex-direction: row;
   font-size: 16px;
 }
 
-.hero-content-head .custom-select-wrapper select {
+.search-box  .custom-select-wrapper select {
   background: none;
   border: none;
   outline: none;
@@ -70,26 +64,33 @@
   max-width: 60px;
 }
 
-.hero-content-head .custom-select-wrapper select option {
+.search-box .custom-select-wrapper select option {
     font-size: 16px;
     max-width: 50px;
 }
 
-.hero-content-head .icon-loc-src {
+.search-box .icon-loc-src {
   color: #535353;
   width: 24px;
   height: 24px;
   margin: 3px 4.6px 3px 5px;
 }
 
-.hero-content-head .search {
+.search-box .simple-line {
+  height: 40px;
+  border: 0.1px solid transparent;
+  border-image: linear-gradient(to top, #f5f5f5 20%, #767F8C 60%, #f5f5f5 70%);
+  border-image-slice: 1;
+}
+
+.search-box .search {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-grow: 1;
 }
 
-.hero-content-head .search .search-input {
+.search-box .search .search-input {
   color: #767F8C;
   background: none;
   border: none;
@@ -100,8 +101,7 @@
 }
 
 /*button animations*/
-
-.hero-content-head .search .outer{
+.search-box .search .outer{
   position: relative;
   overflow: hidden;
   display: flex;
@@ -111,14 +111,13 @@
   background: #015DE6;
 }
 
-.hero-content-head .search .outer .search-button{
+.search-box .search .outer .search-button{
   position: relative;
   z-index: 1;
   width: 100%;
   margin: 1.5px;
 }
-
-.hero-content-head .search .outer::before {
+.search-box .search .outer::before {
   content: "";
   display: block;
   background: linear-gradient(
@@ -149,7 +148,7 @@
   }
 }
   
-.hero-content-head .search .search-button {
+.search-box .search .search-button {
   background-color: #0167FF;
   color: white;
   border:none;
@@ -163,38 +162,29 @@
   animation:all 2.5s ease-in-out;
 }
 
-.hero-content-head .search .search-button:hover {
+.search-box .search .search-button:hover {
   margin:0px;
 }
 
-.hero-content-head .simple-line {
-  height: 40px;
-  margin-right: 10px;
-  border: 0.1px solid transparent;
-  border-image: linear-gradient(to top, #f5f5f5 20%, #767F8C 60%, #f5f5f5 70%);
-  border-image-slice: 1;
-}
+
+
+
 
 .map-image {
-  width: 100%;
-  max-width: 139.13px;
+  width: 150px;
   height: auto;
   opacity: 20%;
-  margin-top: 5rem;
+  margin-top: 8rem;
 }
 
 .image-division {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 9rem;
+  margin-top:9rem;
   position: relative;
 }
 
 .hero-image {
   max-width: 100%;
   height: auto;
-  margin-left: 30px;
   z-index: 1;
 }
 
@@ -209,18 +199,206 @@
   background: linear-gradient(180deg, rgba(249, 251, 255, 0) 60%, #FCFDFF 90%);
 }
 
-
 /* Media Queries */
-@media (max-width: 1200px) {
-    .hero-content-head .hero-title {
-        font-size: 29px;
-        line-height: 44px;
-    }
+@media (max-width: 1024px) {
+  .hero-content {
+    flex-direction: column;
+    align-items: center;
+    padding: 2rem;
+  }
 
+  .hero-item {
+    margin: 2rem 0;
+    margin-top:2rem;
+  }
+
+  .hero-item h5 {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .hero-title {
+    font-size: 40px;
+    line-height: 48px;
+  }
   
-    .image-division {
-        margin-top: 4rem;
-    }
+  .search-box {
+    min-width: unset;
+    width: 100%;
+    padding:4px;
+    flex-direction:row;
+    align-items: stretch;
+    justify-content: center;
+  }
+
+  .search-box input,
+  .search-box select,
+  .search-box button {
+    width: 40%;
+    margin: 0.5rem 0;
+  }
+
+  .search-box input {
+    padding: 12px;
+  }
+
+  .search-box button {
+    padding: 12px;
+    font-size: 14px;
+  }
+
+  .map-image {
+    margin-top:2rem;
+  }
+  
+  .image-division {
+    margin-top:3rem;
+  }
 }
+
+@media (max-width: 768px) {
+  .hero-head {
+    height: auto;
+    padding: 2rem 1rem;
+  }
+
+  .hero-item h5 {
+    font-size: 13px;
+    line-height: 20px;
+  }
+
+  .hero-title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .search-box {
+    min-width: unset;
+    width: 100%;
+    padding: 5px;
+    flex-direction:row;
+    align-items: stretch;
+    justify-content: center;
+  }
+  
+
+  .search-box input,
+  .search-box select,
+  .search-box button {
+    font-size: 14px;
+  }
+}
+
+
+@media (max-width: 530px) {
+  .hero-head {
+    height: auto;
+    padding: 2rem 1rem;
+  }
+
+  .hero-item h5 {
+    font-size: 13px;
+    line-height: 20px;
+  }
+
+  .hero-title {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .search-box {
+    min-width: unset;
+    width: 100%;
+    padding: 5px;
+    flex-direction:column;
+    align-items: stretch;
+    justify-content: center;
+  }
+
+  .search-box .custom-select-wrapper {
+    font-size: 20px;
+    margin-top: 5px;
+  } 
+  .search-box .simple-line {
+    height:0;
+  }
+
+  .search-box .search {
+    margin-top: 5px;
+  }
+  
+  .search-box input,
+  .search-box select,
+  .search-box button {
+    font-size: 14px;
+  }
+}
+
+@media (max-width: 480px) {
+  .hero-head {
+    padding: 1rem;
+  }
+
+  .hero-title {
+    font-size: 24px;
+    line-height: 34px;
+  }
+
+  .search-box {
+    min-width: unset;
+    width:110%;
+    padding: 5px;
+    flex-direction:column;
+    align-items: stretch;
+    justify-content: center;
+  }
+ 
+
+  .search-box input,
+  .search-box select,
+  .search-box button {
+    padding: 5px;
+    flex-direction:column;
+    align-items: stretch;
+    justify-content: center;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
