--- a/src/Components/section.6/WhyUs.css
+++ b/src/Components/section.6/WhyUs.css
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Matter:wght@400;700&display=swap');
 
 
 
-
+.main{
+    padding: 0px;
+}
 .why-us-section {
     font-family: Matter, sans-serif;
 
@@ -75,7 +76,21 @@
     background: rgba(255, 255, 255, 1);
     position: relative;
     top: 100px;
+    display:flex;
+    flex-direction: row-reverse;
 
+}
+
+.reverse-row {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.provider-feature1 {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: end;
 }
 
 .provider-section-2 {
@@ -134,7 +149,7 @@
     height: 500.19px;
     margin-left: 130.81px;
     position: relative;
-    transform: translate(-0%, -14%);
+    transform: translate(-0%, -8%);
 
 }
 
@@ -147,6 +162,7 @@
     width: 350.08px;
     height: 436px;
     transform: translate(-30%,-13.5%);
+
   }
 
   .overlay.first-1 {
@@ -155,10 +171,11 @@
   }
   .overlay.second-2 {
     opacity: 1; 
-    transform: translate(-5%,-16.5%);
-    width: 400.38px;
+    transform: translate(-2%,-9.9%);
+    width: 390.38px;
     height: 420.97px;
     left:-20px;
+
   }
 
 
@@ -314,7 +331,7 @@
 }
 
  .profile-name-2 {
-    margin-left: 9px;
+    margin-left: 17px;
     margin-top: -40px;
 }
 
@@ -461,181 +478,139 @@
     margin-top: -40px;
     width: 120px;
     height: 9px;
-    margin-left: 0px;
+    margin-left: 10px;
 }
 
 
 
 
 
+@media (max-width: 600px) {
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media (max-width: 992px) {
-    .provider-title1, .provider-title2 {
-        margin-left: 0;
-        margin-right: 0;
-        text-align: center;
+    .why-us-section {
+        padding: 10px;
+        background: linear-gradient(180deg, #E4EDFF -17.3%, rgba(253, 254, 255, 0.0763343) 72.99%, rgba(255, 255, 255, 0) 80.46%);
     }
 
-    .provider-feature1 img {
-        width: 170px;
-        height: 200px;
-        display: block;
-        margin: 0 auto;
-        transform: none;
-    }
-
-    .provider-feature2 img {
-        width: 150px;
-        height: 120px;
-        display: block;
-        margin: 0 auto;
-        transform: none;
-    }
-
-    .provider-text1, .provider-text2, .lorem-ipsum, .lorem-ipsum2, .lorem-ipsum3 {
-        text-align: center;
-        margin: 0 auto;
-    }
-
-    .overlay.second {
-        width: 150px;
-        height: 215px;
-        top: -20px;
-        left: 50%;
-        transform: translateX(-50%);
-        position: relative;
-    }
-
-    .overlay.second-2 {
-        width: 150px;
-        height: 170px;
-        top: -70px;
-        left: 50%;
-        transform: translateX(-50%);
-        position: relative;
-    }
-}
-
-@media (max-width: 768px) {
     .why-us {
-        font-size: 36px;
+        font-size: 32px;
+        padding: 0 10px;
+    }
+
+    .card {
+        margin-top: 1rem;
+        margin-right: 0.5rem;
+        margin-left: 0.5rem;
+    }
+
+    .lorem-ipsum, .lorem-ipsum2, .lorem-ipsum3 {
+        font-size: 14px;
+        margin-bottom: 5px;
+    }
+
+    .lorem-ipsum2 {
+        margin-left: 20px;
+        margin-right: 0px;
+        text-align: center;
+    }
+
+    .lorem-ipsum3 {
+        margin-left: 20px;
+        margin-right: 0px;
+        text-align: center;
+    }
+
+    .card-title {
+        font-size: 18px;
+    }
+
+    .card-text {
+        font-size: 14px;
+    }
+
+    .icon img {
+        height: 40px;
     }
 
     .provider-section-1 {
+        padding: 20px;
         top: 200px;
     }
-
+    
     .provider-section-2 {
-        top: 350px;
+        padding: 20px;
+        top: 400px;
     }
 
     .provider-title1, .provider-title2 {
         font-size: 28px;
+        margin-left: 20px;
         text-align: center;
+        margin-top: 20px;
+        
     }
 
-    .provider-text1, .provider-text2, .lorem-ipsum, .lorem-ipsum2, .lorem-ipsum3 {
+    .provider-text1 {
+        justify-content: center;
         font-size: 16px;
+        margin-left: 20px;
+        margin-right: 20px;
         text-align: center;
     }
 
-    .provider-feature2 img {
-        width: 300px;
-        height: 250px;
-        display: block;
-        margin: -150px;
-        transform: translateX(170%);
-
-    }
-
-    .provider-feature1 img {
-        width: 300px;
-        height: 250px;
-        display: block;
-        transform: translate(-50%,-110%);
-        margin-top: -150px;
-
-        
-    }
-
-    .overlay.second {
-        width: 270px;
-        top: -110px;
-        left: 50%;
-        transform: translateX(-50%);
-        position: relative;
-    }
-
-    .overlay.second-2 {
-        width: 300px;
-        height: 210px;
-        left: 50%;
-        transform: translate(85%);
-        position: relative;
-    }
-}
-
-@media (max-width: 576px) {
-    .why-us {
-        font-size: 36px;
-    }
-
-    .provider-title1, .provider-title2 {
-        font-size: 28px;
+     .provider-text2 {
+        font-size: 16px;
+        margin-left: 20px;
+        margin-right: 20px;
         text-align: center;
-    }
-
-    .provider-text1, .provider-text2, .lorem-ipsum, .lorem-ipsum2, .lorem-ipsum3 {
-        font-size: 14px;
-        text-align: center;
-    }
-
-    .provider-feature2 img {
-        width: 330px;
-        height: 200px;
-        display: block;
-        transform: translateX(46.5vw);
     }
 
     .provider-feature1 img {
         width: 300px;
         height: 200px;
-        display: block;
+        margin-right: 20px;
+        margin: 0 auto;
+        left:50%;
+        transform: translate(12.5vw, -55vw);
         
-        transform: translateX(10vw);
     }
 
-    .overlay.second {
-        width: 270px;
-        height: 220px;
-        top: -20px;
-        left: 50%;
-        transform: translateX(-78.2%);
-        position: relative;
+    .provider-feature2 img {
+        width: 310px;
+        height: 200px;
+        margin-right: 40px;
+        margin-left: 0;
+        margin: 0 auto;
+        transform: translate(16vw, -40vw);
     }
 
-    .overlay.second-2 {
-        width: 304px;
+    .overlay.second{
+        width: 260px;
+        height: 219px;
+        transform: translate(13.5vw, -59.9vw);
+    }
+
+    .overlay.second-2{
+
+        width: 290px;
         height: 170px;
-        top: -2px;
-        left: 50%;
-        transform: translateX(-46.4vw);
-        position: relative;
+        transform: translate(16vw, -40.6vw);
     }
+
+
+    
+    .provider-text2, .lorem-ipsum3 {
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .x-image1 img, .x-image2 img {
+        width: 100%;
+        height: auto;
+        left: 0;
+        transform: translate(0, 0);
+    }
+
     .hover-card{
         position:absolute;
         transform: translate(-15vw,-35vw);
@@ -645,8 +620,8 @@
 
     .hover-card-2{
         position:absolute;
-        transform: translate(20vw,-25vw);
-        width:300px;
+        transform: translate(15vw,-25vw);
+        width:270px;
 
     }
 
@@ -686,175 +661,14 @@
         margin-left: 14px;
         margin-top: -40px;
     }
+
 }
 
-/* @media (max-width: 430px) and (min-height: 932px) {
-    .provider-feature2 img {
-        width: 300px;
-        transform: translateX(1vw);
-    }
 
-    .provider-feature1 img {
-        width:300px;
-        transform: translateX(13vw);
-    }
 
-    .overlay.second {
-        width: 270px;
-        transform: translateX(-50vw);
-    }
 
-    .overlay.second-2 {
-        transform: translateX(-47vw);
-    }
-} */
 
-/* @media (max-width: 360px) and (min-height: 740px) {
-    .provider-feature2 img {
-        transform: translateX(-10vw);
-    }
 
-    .provider-feature1 img {
-        transform: translateX(25vw);
-    }
 
-    .overlay.second {
-        transform: translateX(-29.7vw);
-    }
 
-    .overlay.second-2 {
-        transform: translateX(-47vw);
-    }
-} */
 
-/* @media (max-width: 380px) and (max-height: 675px) {
-    .provider-feature2 img {
-        transform: translateX(-8vw);
-    }
-
-    .provider-feature1 img {
-        transform: translateX(25vw);
-    }
-
-    .overlay.second {
-        transform: translateX(-31.7vw);
-    }
-
-    .overlay.second-2 {
-        transform: translateX(-47vw);
-    }
-} */
-
-/* @media (max-width: 430px) and (max-height: 580px) {
-    .provider-feature2 img {
-        width: 300px;
-        height: 250px;
-        transform: translateX(15vw);
-    }
-
-    .provider-feature1 img {
-        width: 300px;
-        transform: translateX(13vw);
-    }
-
-    .overlay.second {
-        width: 270px;
-        transform: translateX(-49.7vw);
-    }
-
-    .overlay.second-2 {
-        width: 300px;
-        height: 210px;
-        transform: translateX(-46vw);
-    }
-}
-
-@media (max-width: 380px)  { 
-    .provider-feature2 img
-   {
-      
-      transform: translateX(-20vw); 
-    }
-
-    .provider-feature1 img {
-        transform: translateX(8vw); 
-        
-      }
-  
-      .provider-title1, .provider-title2 {
-        font-size: 28px;
-        text-align: center;
-    }
-
-    .provider-text1, .provider-text2, .lorem-ipsum, .lorem-ipsum2, .lorem-ipsum3 {
-        font-size: 14px;
-        margin: 0 10px;
-        text-align: center;
-        align-items: center;
-    }
-    
-    .overlay.second {
-      transform: translateX(-33.6vw); 
-    }
-    .overlay.second-2 {
-      transform: translateX(-58vw); 
-    }
-  }
-
-  @media (max-width: 320px) {
-
-    .provider-feature2 img
-   {
-      transform: translateX(-18vw); 
-    }
-
-    .provider-feature1 img
-    {
-       transform: translateX(10vw); 
-     }
-    .overlay.second {
-      transform: translateX(-24vw); 
-    }
-
-    .overlay.second-2 {
-        transform: translateX(-47vw); }
-      .provider-feature2 img {
-        transform: translateX(12vw);
-    }
-
-    .provider-feature1 img {
-        transform: translateX(8vw);
-    }
-
-    
-
-    
-    .overlay.second {
-        transform: translateX(-49.6vw);
-    }
-
-    .overlay.second-2 {
-        transform: translateX(-44vw);
-    }
-}
-
-@media (max-width: 320px) {
-    .provider-feature2 img {
-        transform: translateX(-18vw);
-    }
-
-    .provider-feature1 img {
-        transform: translateX(10vw);
-    }
-
-    .overlay.second {
-        transform: translateX(-24vw);
-    }
-
-    .overlay.second-2 {
-        transform: translateX(-47vw);
-    }
-} */
-  
-
-  
