--- a/src/Components/section.6/WhyUs.css
+++ b/src/Components/section.6/WhyUs.css
@@ -1,674 +1,70 @@
+@import url('https://fonts.googleapis.com/css2?family=Matter:wght@400;700&display=swap');
 
-
-
-.main{
-    padding: 0px;
-}
-.why-us-section {
-    font-family: Matter, sans-serif;
-
-    padding: 20px; 
+.background {
+    padding: 35px;
     background: linear-gradient(180deg, #E4EDFF -17.3%, rgba(253, 254, 255, 0.0763343) 72.99%, rgba(255, 255, 255, 0) 80.46%);
-    /* max-width: 1200px; */
 }
 
-.why-us {
+.lorem {
+    text-align: center;
     font-family: Matter, sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #0167FF;
+}
 
+.why {
+    font-family: Matter, sans-serif;
     font-size: 46px;
     color: #272848;
     font-weight: 600;
     text-align: center;
 }
 
-.card {
-    margin-top: 2rem;
-    margin-right: 1rem;
-    margin-left: 1rem;
-}
-
-.card:hover {
-    border-color: #0167FF;
-    border-width: 2px;
-}
-
-.lorem-ipsum, .lorem-ipsum2, .lorem-ipsum3 {
-    font-family: Matter, sans-serif;
-
-    font-weight: 500;
-    font-size: 16px;
-    margin-bottom: 10px;
-}
-
-/* .lorem-ipsum2 {
-    margin-left: 50px;
-} */
-
-.lorem-ipsum2 {
-    margin-right: 0rem;
-    margin-left: 120px;
-}
-
-.card-title {
-    font-family: Matter, sans-serif;
-
-    font-size: 22px;
-    font-weight: 700;
+.h2 {
     color: #0167FF;
-    text-align: center;
+    font-family: Matter, sans-serif;
 }
 
-.card-text {
-    font-family: Matter, sans-serif;
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Increased min width */
+    gap: 20px;
+}
 
+.grid-item {
+    border: none;
+    border-radius: 9px;
+    padding: 18px; /* Increased padding */
+    text-align: center;
+    margin-top: 2rem;
+    background: transparent;
+}
+
+.grid-item:hover {
+    border: 1px solid #0167FF;
+    background: #F4F7FC;
+    transition: none;
+}
+
+.grid-item h2 {
+    font-family: Matter, sans-serif;
+    color: #0167FF;
+    font-size:20px;
+    line-height: 28px;
+    font-weight: 700;
+    margin-top: 20px;
+}
+
+.grid-item p {
+    color: #52525B;
+    font-family: Matter, sans-serif;
+    line-height: 28px;
     font-size: 17px;
     font-weight: 400;
-    color: #52525B;
 }
 
-.icon img {
-    max-width: 100%;
-    height: 60px;
+.grid-item img {
+    width: 70px; /* Increased width */
+    height: 50px; /* Increased height */
 }
-
-.provider-section-1 {
-    padding: 20px;
-    background: rgba(255, 255, 255, 1);
-    position: relative;
-    top: 100px;
-    display:flex;
-    flex-direction: row-reverse;
-
-}
-
-.reverse-row {
-    display: flex;
-    flex-direction: row-reverse;
-}
-
-.provider-feature1 {
-    position: relative;
-    z-index: 2;
-    display: flex;
-    justify-content: end;
-}
-
-.provider-section-2 {
-    padding: 20px;
-    background: rgba(255, 255, 255, 1);
-    position: relative;
-    top: 250px;
-}
-
-
-.provider-title1 {
-    font-family: 'Matter';
-    font-size: 36px;
-    font-weight: 700;
-    color: #272848;
-    margin-bottom: 20px;
-    margin-left: 120px;
-    
-}
-
-.provider-text1, .provider-text2 {
-       font-family: Matter, sans-serif;
-
-    font-size: 18px;
-    color: #52525B;
-    margin-bottom: 15px;
-    
-}
-
-.provider-text1 {
-    margin-left: 120px;
-    margin-right: 180px;
-}
-
-.provider-text1 img, .provider-text2 img {
-    width: 20px;
-    height: 20px;
-    margin-right: 10px;
-}
-
-
-
-.provider-feature1 img {
-    width: 400px;
-    height: 400px;
-    margin-right: 120px;
-    position: relative;
-    transform: translate(-27%, -5%);
-
-}
-
-
-
-.provider-feature2 img {
-    width: 400px;
-    height: 500.19px;
-    margin-left: 130.81px;
-    position: relative;
-    transform: translate(-0%, -8%);
-
-}
-
-.overlay.first {
-    opacity: 0.9; 
-  }
-  
-  .overlay.second {
-    opacity: 1; 
-    width: 350.08px;
-    height: 436px;
-    transform: translate(-30%,-13.5%);
-
-  }
-
-  .overlay.first-1 {
-    opacity: 1; 
-    top: -70px;
-  }
-  .overlay.second-2 {
-    opacity: 1; 
-    transform: translate(-2%,-9.9%);
-    width: 390.38px;
-    height: 420.97px;
-    left:-20px;
-
-  }
-
-
-.provider-text2,
-.lorem-ipsum3 {
-    margin-left: 220px;
-    margin-right: 80px;
-}
-
-.provider-title2 {
-    margin-left: 220px;
-}
-
-.provider-title2 {
-    font-family: Matter, sans-serif;
-
-    font-size: 36px;
-    font-weight: 700;
-    color: #272848;
-    margin-bottom: 20px;
-    
-}
-
-.x-image1 {
-    position: relative;
-}
-
-.x-image1 img {
-    position: absolute;
-    left: 15%;
-    transform: translate(-50%, -50%);
-    width: 500.14px;
-    height: 390.86px;
-    color: #0067FF;
-    opacity: 1;
-    z-index: 1;
-}
-
-.x-image2 {
-    position: relative;
-}
-
-.x-image2 img {
-    position: absolute;
-    margin-bottom: 100px;
-    transform: translate(-0%, -50%);
-    width: 680.14px;
-    height: 400.86px;
-    color: #0067FF;
-    opacity: 1;
-    z-index: 1;
-}
-
-.provider-feature1 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    
-  }
-
-.provider-feature2 .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    
-  }
-  
-
-
-  .hover-card {
-    padding: 20px;
-    position: absolute;
-    z-index: 2;
-    width: 350px;
-    height: 174px;
-    border: none;
-    border-radius: 16px;
-    transition: opacity 0.3s ease-in-out;
-    opacity: 1;
-    transform: translate(-20%, -150%);
-}
-
-
-.hover-card-2 {
-    padding: 20px;
-    position: absolute;
-    z-index: 2;
-    width: 350px;
-    height: 174px;
-    border: none;
-    border-radius: 16px;
-    transition: opacity 0.3s ease-in-out;
-    opacity: 1;
-    transform: translate(50%, -100%);
-}
-
-.hover-profile-card {
-    background: white;
-    border: 1px solid #ddd;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 16px;
-    opacity: 0;
-    animation: fadeInCard 0.3s ease-in-out forwards;
-}
-
-.card-1 {
-    position: relative;
-    top: 0;
-    left: 0;
-    animation: swipeUpCard 0.6s ease-in-out forwards;
-    animation-delay: 3s; 
-    z-index: 1; 
-    border-radius: 0 20px 0 20px; /* Top-left, Top-right, Bottom-right, Bottom-left */
-}
-
-.card-2 {
-    animation-delay: 1.2s; /* Delay for card 2 to appear after card 1 */
-    z-index: 2;
-}
-
-.hover-profile-card .doctor-profile-img {
-    opacity: 0;
-    animation: fadeInImage 0.3s ease-in-out forwards;
-}
-
-.card-1 .doctor-profile-img {
-    animation-delay: 3.1s;
-}
-
-.card-2 .doctor-profile-img {
-    animation-delay: 1.5s;
-}
-
-.hover-profile-card .profile-name {
-    opacity: 0;
-    animation: fadeInName 0.3s ease-in-out forwards;
-}
-
-.hover-profile-card .profile-name-2 {
-    opacity: 0;
-    animation: fadeInName 0.3s ease-in-out forwards;
-}
-.card-1 .profile-name {
-    animation-delay: 3.3s;
-}
-
-.card-2 .profile-name {
-    animation-delay: 1.8s;
-}
-
-.card-2 .profile-name-2 {
-    animation-delay: 1.8s;
-}
-
- .profile-name-2 {
-    margin-left: 17px;
-    margin-top: -40px;
-}
-
-.hover-profile-card .bar-image-1,
-.hover-profile-card .bar-image-2 ,
-.hover-profile-card .bar-image-3 ,
-.hover-profile-card .bar-image-4 {
-    opacity: 0;
-    animation: fadeInBar 0.3s ease-in-out forwards;
-}
-
-.card-1 .bar-image-1,
-.card-1 .bar-image-2 {
-    animation-delay: 3.5s;
-}
-
-.card-2 .bar-image-1,
-.card-2 .bar-image-2,
-.card-2 .bar-image-3,
-.card-2 .bar-image-4 {
-    animation-delay: 2.1s;
-}
-
-@keyframes fadeInCard {
-    from {
-        opacity: 0;
-        transform: translateY(-10px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes swipeUpCard {
-    from {
-        opacity: 0;
-        transform: translateY(30px);
-    }
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-@keyframes fadeInImage {
-    from {
-        opacity: 0;
-        transform: scale(0.9);
-    }
-    to {
-        opacity: 1;
-        transform: scale(1);
-    }
-}
-
-@keyframes fadeInName {
-    from {
-        opacity: 0;
-        transform: translateX(-10px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-@keyframes fadeInBar {
-    from {
-        opacity: 0;
-        transform: translateX(-10px);
-    }
-    to {
-        opacity: 1;
-        transform: translateX(0);
-    }
-}
-
-.bar-image-1 {
-    margin-left: 78px;
-    margin-top: -50px;
-}
-
-.bar-image-1 img {
-    height: 8px;
-    width: 170px;
-}
-
-.bar-image-2 {
-    margin-left: 78px;
-    margin-top: -25px;
-}
-
-.bar-image-2 img {
-    height: 8px;
-    width: 130px;
-}
-.bar-image-3 {
-    margin-left: 13px;
-  
-}
-.bar-image-4 {
-    margin-left: 13px;
-  
-}
-.bar-image-3 img {
-    height: 8px;
-    width: 230px;
-}
-
-.bar-image-4 img {
-    height: 8px;
-    width: 230px;
-}
-
-.hover-profile-card .card-title {
-    font-family: 'Matter';
-    font-size: 13px;
-    font-weight: 700;
-    color: #535353;
-    display: flex;
-    align-items: center;
-    padding-top: 10px;
-}
-
-.hover-profile-card .card-text {
-    font-family: 'Matter';
-    font-size: 13.9px;
-    font-weight: 500;
-    color: #535353;
-    display: flex;
-    margin-left: 15px;
-}
-
-.hover-profile-card .card-title .doctor-profile-img {
-    top: 10px;
-    margin-right: 10px;
-    width: 52px;
-    height: 52px;
-    border-radius: 50%;
-}
-
-.hover-profile-card .card-title .profile-name {
-    margin-top: -40px;
-    width: 120px;
-    height: 9px;
-    margin-left: 10px;
-}
-
-
-
-
-
-@media (max-width: 600px) {
-
-    .why-us-section {
-        padding: 10px;
-        background: linear-gradient(180deg, #E4EDFF -17.3%, rgba(253, 254, 255, 0.0763343) 72.99%, rgba(255, 255, 255, 0) 80.46%);
-    }
-
-    .why-us {
-        font-size: 32px;
-        padding: 0 10px;
-    }
-
-    .card {
-        margin-top: 1rem;
-        margin-right: 0.5rem;
-        margin-left: 0.5rem;
-    }
-
-    .lorem-ipsum, .lorem-ipsum2, .lorem-ipsum3 {
-        font-size: 14px;
-        margin-bottom: 5px;
-    }
-
-    .lorem-ipsum2 {
-        margin-left: 20px;
-        margin-right: 0px;
-        text-align: center;
-    }
-
-    .lorem-ipsum3 {
-        margin-left: 20px;
-        margin-right: 0px;
-        text-align: center;
-    }
-
-    .card-title {
-        font-size: 18px;
-    }
-
-    .card-text {
-        font-size: 14px;
-    }
-
-    .icon img {
-        height: 40px;
-    }
-
-    .provider-section-1 {
-        padding: 20px;
-        top: 200px;
-    }
-    
-    .provider-section-2 {
-        padding: 20px;
-        top: 400px;
-    }
-
-    .provider-title1, .provider-title2 {
-        font-size: 28px;
-        margin-left: 20px;
-        text-align: center;
-        margin-top: 20px;
-        
-    }
-
-    .provider-text1 {
-        justify-content: center;
-        font-size: 16px;
-        margin-left: 20px;
-        margin-right: 20px;
-        text-align: center;
-    }
-
-     .provider-text2 {
-        font-size: 16px;
-        margin-left: 20px;
-        margin-right: 20px;
-        text-align: center;
-    }
-
-    .provider-feature1 img {
-        width: 300px;
-        height: 200px;
-        margin-right: 20px;
-        margin: 0 auto;
-        left:50%;
-        transform: translate(12.5vw, -55vw);
-        
-    }
-
-    .provider-feature2 img {
-        width: 310px;
-        height: 200px;
-        margin-right: 40px;
-        margin-left: 0;
-        margin: 0 auto;
-        transform: translate(16vw, -40vw);
-    }
-
-    .overlay.second{
-        width: 260px;
-        height: 219px;
-        transform: translate(13.5vw, -59.9vw);
-    }
-
-    .overlay.second-2{
-
-        width: 290px;
-        height: 170px;
-        transform: translate(16vw, -40.6vw);
-    }
-
-
-    
-    .provider-text2, .lorem-ipsum3 {
-        margin-left: 20px;
-        margin-right: 20px;
-    }
-
-    .x-image1 img, .x-image2 img {
-        width: 100%;
-        height: auto;
-        left: 0;
-        transform: translate(0, 0);
-    }
-
-    .hover-card{
-        position:absolute;
-        transform: translate(-15vw,-35vw);
-        width:300px;
-        
-    }
-
-    .hover-card-2{
-        position:absolute;
-        transform: translate(15vw,-25vw);
-        width:270px;
-
-    }
-
-    
-    
-    .bar-image-1 img {
-        height: 8px;
-        width: 110px;
-    }
-    
-   
-    
-    .bar-image-2 img {
-        height: 8px;
-        width: 80px;
-    }
-    
-    
-    .bar-image-3 img {
-        height: 8px;
-        width: 175px;
-    }
-    
-    .bar-image-4 img {
-        height: 8px;
-        width: 175px;
-    }
-
-    .hover-profile-card .card-title .profile-name {
-        margin-top: -40px;
-        width: 120px;
-        height: 9px;
-        margin-left: 7.5px;
-    }
-
-    .profile-name-2 {
-        margin-left: 14px;
-        margin-top: -40px;
-    }
-
-}
-
-
-
-
-
-
-
-
-
