--- a/src/Components/Nestednavbar/nestednavbar.css
+++ b/src/Components/Nestednavbar/nestednavbar.css
@@ -131,7 +131,7 @@
     align-items: center;
     width:100%;
     height:100vh;
-    margin: 60px auto;
+    margin: 55px auto;
   }
   
   .video-player {
@@ -154,12 +154,31 @@
     transition: transform 1s ease;
   }
   
-/* Mobile view adjustments */
-@media (max-width: 768px) {
+
+@media (max-width: 1024px) {
     .video-wrapper {
        
         height:auto;
-        margin: 0 auto;
+        margin: -6px auto;
+      }
+  
+    .video-player.zoomed-out {
+      width: 70%;
+      height: auto;
+      transform: scale(1);
+    }
+  
+    .video-player.zoomed {
+      width: 100%;
+    }
+  }
+  
+  @media screen and (min-width: 1440px) and (max-width: 2560px) {
+
+    .video-wrapper {
+       
+        height:auto;
+        margin: -6px auto;
       }
   
     .video-player.zoomed-out {
